@@ -1,6 +1,10 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.216 2005/04/11 20:05:40 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.217 2005/04/11 20:44:47 rocket Exp $
+
+  11 Apr 2005; Eric Edgar <rocket@gentoo.org>
+  modules/livecd_stage2_target.py:
+  Added support for livecd-stage2 to use a snapshot or livecd-stage1 image
 
   11 Apr 2005; Eric Edgar <rocket@gentoo.org>
   modules/generic_stage_target.py, modules/livecd_stage1_target.py,
